index page built

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-hello world
+<Doctype html>
+<html>
+<head>
+<title>Flexbox example</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="./css/styles.css" />
+</head>
+<body>
+    <header>
+        <h1 class="txt-center">Flexbox Star wars characters</h1>
+    </header>
+    <main class="container">
+        <img class="img" src='./images/chewbacca_square.png' alt="chewy" />
+        <img class="img" src="./images/finn_square.png" alt="finn" />
+        <img class="img" src="./images/kylo_square.png" alt="kylo" />
+        <img class="img" src="./images/poe_square.png" alt="poe" />
+    </main>
+
+
+</body>
+
+</html>
